--- a/javascript/v-a-o/v-a-o.html
+++ b/javascript/v-a-o/v-a-o.html
@@ -1308,7 +1308,77 @@
                 </p>
             </div>
             <div class="javascript vao text">
+                <div class="javascript vao subheader">
+                    <p>
+                        Types of Numbers
+                    </p>
+                </div>
+                <p>
+                    There are two numbers of numbers.
+                </p>
+                <ul>
+                    <li>
+                        Integers are numbers without a fractional part. They can be positive or negative. E.g., 10, 400, -5.
+                    </li>
+                    <li>
+                        Floating point numbers (floats) have decimal points and decimal places. E.g., 12.5, 3.14, 56.77.
+                    </li>
+                </ul>            
+                <p>
+                    There are also different types of number systems. Decimal is base 10 (uses 0-9 in each digit), but there's also:
+                </p>
+                <ul>
+                    <li>
+                        Binary - The lowest level language of computers; 0s and 1s.
+                    </li>
+                    <li>
+                        Octal - Base 8, uses 0-7 in each digit.
+                    </li>
+                    <li>
+                        Hexadecimal - Base 16, uses 0-9 and then a-f in each digit. Commonly found in colour settings in CSS.
+                    </li>
+                </ul>
+                <p>
+                    JavaScript has only one data type for numbers, integers and decimals, and that is <code>Numbers</code>. 
+                    This means when dealing with Numbers type data, you must handle them in the same way, with Numbers type 
+                    data as well.
+                </p>
+                <br>
+                <div class="javascript vao subheader">
+                    <p>
+                        It's all numbers to me
+                    </p>
+                </div>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        const myInt = 5;
+                        const myFloat = 6.667;
+                        myInt;
+                        myFloat;
+                    </code>
+                    &lt;&#47;script&gt;
+                </pre>
+                <p>
+                    Enter the values from the example above into the console (<code>F12</code>) and it should return the 
+                    same values when entering the constants.
+                </p>
+                <p>
+                    To check that these are the same datatype, Numbers, use the operator <code>typeof</code> in JavaScript's 
+                    console.
+                </p>
+                <pre>
+                    &lt;script&gt;
+                    <code>
+                        typeof myInt;
+                        typeof myFloat;
+                    </code>
+                    &lt;&#47;script&gt;
+                </pre>
+
+                    
                 
+
                 <a href="" target="_blank" rel="noopener noreferrer"></a>
                 <pre>
                     &lt;script&gt;
@@ -1316,7 +1386,7 @@
                         You are gay.
                     </code>
                     &lt;&#47;script&gt;
-                </pre>                
+                </pre>
             </div>
         </div>
 
