--- a/javascript/v-a-o/v-a-o.html
+++ b/javascript/v-a-o/v-a-o.html
@@ -1375,6 +1375,17 @@
                     </code>
                     &lt;&#47;script&gt;
                 </pre>
+                <p>
+                    What we should get in return from the console is <code>'number'</code>.
+                </p>
+                <div class="javascript vao subheader">
+                    <p>
+                        Useful Number methods
+                    </p>
+                </div>
+                <p>
+                    The <code>Number</code> object, 
+                </p>
 
                     
                 
